; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/parser/extr_parser.c_raw_parser.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/parser/extr_parser.c_raw_parser.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32*, i32 }

@ScanKeywords = common dso_local global i32 0, align 4
@ScanKeywordTokens = common dso_local global i32 0, align 4
@NIL = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @raw_parser(i8* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 2
  %9 = load i32, i32* @ScanKeywordTokens, align 4
  %10 = call i32 @scanner_init(i8* %7, i32* %8, i32* @ScanKeywords, i32 %9)
  store i32 %10, i32* %4, align 4
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  store i32 0, i32* %11, align 8
  %12 = call i32 @parser_init(%struct.TYPE_3__* %5)
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @base_yyparse(i32 %13)
  store i32 %14, i32* %6, align 4
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @scanner_finish(i32 %15)
  %17 = load i32, i32* %6, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %1
  %20 = load i32*, i32** @NIL, align 8
  store i32* %20, i32** %2, align 8
  br label %24

21:                                               ; preds = %1
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 1
  %23 = load i32*, i32** %22, align 8
  store i32* %23, i32** %2, align 8
  br label %24

24:                                               ; preds = %21, %19
  %25 = load i32*, i32** %2, align 8
  ret i32* %25
}

declare dso_local i32 @scanner_init(i8*, i32*, i32*, i32) #1

declare dso_local i32 @parser_init(%struct.TYPE_3__*) #1

declare dso_local i32 @base_yyparse(i32) #1

declare dso_local i32 @scanner_finish(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
